[package]
name = "tp-devops"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tp-devops"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["trace"] }
xid = "1"
rand = "0.8"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
